# ldap-scim-bridge

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  cabal.project  flake.nix  ldap-scim-bridge.cabal  sample-conf.yaml  shell.nix  stack.yaml  treefmt.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
admin/: publish.sh
app/: Main.hs
examples/: wire-server-conf1.yaml  wire-server-conf2.yaml  wire-server.sh
examples/wire-server/: conf1.yaml  conf2.yaml  run.sh  runlog
ldif/: README  README.md  deleted_users.ldif  dirs.ldif  new_users.ldif  users.ldif
maintainer/: release.sh
src/: LdapScimBridge.hs
src/LdapScimBridge/: Config.hs  Ldap.hs  Logger.hs  Mapping.hs  Scim.hs
test/: Spec.hs
