cabal-version:      2.4
name:               ldap-scim-bridge
version:            0.10
synopsis:           See README for synopsis
description:        See README for description
homepage:           https://github.com/wireapp/ldap-scim-bridge
bug-reports:        https://github.com/wireapp/ldap-scim-bridge/issues
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             wire.com
maintainer:         backend@wire.com
copyright:          (c) 2024 wire.com
category:           System
build-type:         Simple
extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files:
  examples/wire-server/conf1.yaml
  examples/wire-server/conf2.yaml
  examples/wire-server/run.sh
  examples/wire-server/runlog

tested-with:        GHC ==9.6.6

source-repository head
  type:     git
  location: https://github.com/wireapp/ldap-scim-bridge.git

common common-options
  build-depends:
    , aeson                 >=2.1.2
    , aeson-pretty          >=0.8.10
    , base
    , bytestring            >=0.11.5
    , containers            >=0.6.7
    , email-validate        >=2.3.2
    , hscim                 >=0.4.0.6
    , http-client           >=0.7.16
    , http-client-tls       >=0.3.6
    , http-types            >=0.12.4
    , ldap-client           >=0.4.2
    , network               >=3.1.4
    , relude                >=1.2.1
    , servant               >=0.19.1
    , servant-client        >=0.19
    , servant-client-core   >=0.19
    , string-conversions    >=0.4.0
    , text                  >=2.0.2
    , tinylog               >=0.15.0
    , unordered-containers  >=0.2.20
    , yaml                  >=0.11.11

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

  ghc-options:
    -O2 -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs
    -optP-Wno-nonportable-include-path -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields
    -Wmissing-deriving-strategies

  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: LdapScimBridge

executable ldap-scim-bridge
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  ldap-scim-bridge
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite ldap-scim-bridge-test
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  build-depends:
    , base
    , bytestring          >=0.11.5
    , email-validate      >=2.3.2
    , hscim
    , hspec
    , ldap-client         >=0.4.2
    , ldap-scim-bridge
    , QuickCheck
    , string-conversions
    , text                >=2.0.2
    , yaml                >=0.11.11

  hs-source-dirs:   test
  default-language: Haskell2010
